<resources>
    <string name="app_name">MovieApp</string>

    <string name="prompt_email">Your email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_continue">Continue</string>
    <string name="welcome">"Welcome !"</string>
<!--    <string name="invalid_username">Not a valid username</string>-->
<!--    <string name="invalid_password">Password must be >5 characters</string>-->
<!--    <string name="login_failed">"Login failed"</string>-->
</resources>